# swpp-2025-project-team-10

./: .editorconfig  .gitignore  .ktlint  .pre-commit-config.yaml  Makefile  README.md  TEST_PR_DEMO.md
.github/workflows/: ci.yml  deploy-dev.yml  pr-checks.yml
ai-model/: .env.pub  README.md  pyproject.toml  test_openai_simple.py
ai-model/examples/: README.md
ai-model/examples/scenarios/: example_1_mystery_lover.yaml  example_2_casual_reader.yaml  example_3_barter_negotiation.yaml  korean_example_1_mystery_lover.yaml
ai-model/examples/scripts/: example_usage.py  hybrid_demo.py  manual_test_with_local_llm.py  test_korean_examples.py  test_korean_openai.py  test_real_model.py
ai-model/models/: .gitignore
ai-model/models/checkpoints/: rf_ranker.pkl
ai-model/src/: __init__.py
ai-model/src/adapters/: __init__.py  backend_adapter.py  frontend_adapter.py
ai-model/src/agents/: negotiation.py
ai-model/src/api/: server.py
ai-model/src/data/: entities.py
ai-model/src/graph/: candidate.py  candidate_generator.py  market_graph.py
ai-model/src/llm/: __init__.py  client.py  config.py  reasoning.py
ai-model/src/models/: random_forest.py  ranker.py
ai-model/src/pipeline/: hybrid_exchange.py  recommender.py
ai-model/src/training/: train_rf.py
ai-model/src/visualization/: __init__.py  conversation_formatter.py
ai-model/tests/: test_llm_integration.py  test_market_graph.py  test_recommender.py
backend/: .coveragerc  .env.example  DUMMY_DATA_README.md  README.md  create_dummy_data.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0003_user_has_initial_taste_usertaste.py  0004_alter_usertaste_options_remove_user_favorite_genres_and_more.py  0005_add_user_lat_lon.py  0006_add_trade_fields_to_usertaste.py  0007_remove_user_latitude_remove_user_longitude_and_more.py  0008_add_user_lat_lon_back.py
backend/accounts/tests/: __init__.py  test_models.py  test_password_reset.py  test_profile_me_endpoint.py  test_serializers.py  test_user_barter_info_serializer.py  test_user_taste.py  test_views_auth.py  test_views_google_oauth.py  test_views_profile.py  test_views_social_auth.py
backend/ai_integration/: README.md  services.py
backend/barter/: apps.py  models.py  serializers.py  urls.py  views.py
backend/barter/migrations/: 0001_initial.py  0002_initial.py  0003_alter_bartercounter_offered_books_and_more.py  0003_alter_barterrequest_id.py  0004_alter_barterrequest_status.py  0005_merge_20251115_1449.py  0006_alter_barterrequest_id.py
backend/barter/tests/: test_barter.py  test_barter_endpoints.py  test_barter_flow.py  test_error_cases.py
backend/books/: admin.py  ai_views.py  apps.py  book_search_api.py  models.py  serializers.py  tempCodeRunnerFile.py  urls.py  views.py
backend/books/management/commands/: bootstrap_korean_books.py  categorize_publications.py  import_books_from_kakao.py  sync_book_metadata.py
backend/books/migrations/: 0001_initial.py  0002_alter_bookreview_unique_together_and_more.py  0003_bookreview_isbn_bookreview_publisher.py  0003_translator_book_external_url_book_original_price_and_more.py  0004_alter_book_original_price_alter_book_sale_price.py  0004_remove_book_books_book_availab_7c5efd_idx_and_more.py  0005_remove_book_authors_remove_book_genres_and_more.py  0006_delete_book_and_more.py  0006_remove_book_authors_book_authors.py  0007_remove_book_authors_book_authors.py
backend/books/services/: book_import_service.py  book_metadata_sync.py  kakao_book_pipeline.py  publication_categories.py
backend/books/tests/: __init__.py  test_ai_endpoints.py  test_barter_and_wishlist.py  test_book_detail_api.py  test_book_import_service.py  test_book_metadata_sync.py  test_book_search_api.py  test_bookcopy.py  test_explore_recommendation_service.py  test_kakao_book_pipeline.py  test_library_endpoints.py  test_management_commands.py  test_modify_book_review.py  test_publication_categorizer.py  test_publication_view.py  test_review_post_signal.py  test_sample_publications.py  test_serializers.py  test_toggle_barter.py  test_views_likes.py  test_views_reviews.py  test_wishlist.py
backend/core/: asgi.py  routing.py  settings.py  urls.py
backend/core/tests/: test_urls.py
backend/docs/: API_CONVENTIONS.md
backend/notify/: models.py  serializers.py  urls.py  utils.py  views.py
backend/notify/migrations/: 0001_initial.py  0002_alter_notification_notification_type_and_more.py
backend/notify/tests/: test_notification.py  test_notification_side_effects.py  test_notifications_api.py
backend/social/: admin.py  models.py  serializers.py  urls.py  views.py
backend/social/migrations/: 0001_initial.py  0002_alter_post_id.py  0002_post_author_name_post_book_cover_image_and_more.py  0002_post_book_title.py  0003_alter_bookclub_current_book_and_more.py  0003_alter_post_id.py  0003_post_author_name.py  0004_remove_post_book_cover_image.py  0004_remove_post_social_post_author_idx_and_more.py
backend/social/tests/: test_barter_like_comment_endpoints.py  test_comment_view.py  test_post_create.py  test_post_integer_id.py  test_post_views.py  test_serializers.py
backend/tests/: README.md  __init__.py  debug_auth.py  test_api_integration.py  test_auth_debug.py  test_server.py
docs/: README.md
docs/en/: README.md
docs/en/development/: CONVENTIONS.md  GIT_WORKFLOW.md  SETUP.md  TESTING.md
docs/en/version-control/: BRANCH_STRATEGY.md  COMMIT_RULES.md  PR_RULES.md
docs/ko/: README.md
docs/ko/development/: CONVENTIONS.md  GIT_WORKFLOW.md  SETUP.md  TESTING.md
docs/ko/version-control/: BRANCH_STRATEGY.md  COMMIT_RULES.md  PR_RULES.md
frontend/: .gitignore  build.gradle.kts  local.properties  settings.gradle.kts
frontend/app/: build.gradle.kts
frontend/gradle/: libs.versions.toml
scripts/formatters/: format_all.sh  format_kotlin.sh  format_python.py
sources/: iter2_demo.mov
tools/dev/: set_interpreter.py  use-ai-model  use-ai-model.py  use-backend  use-backend.py
(+208 files in other folders)
