[project]
name = "ai-model"
version = "0.1.0"
description = "LLM-powered recommendation and barter reasoning engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.57.0",
    "pyyaml>=6.0.0",
    "torch>=2.4.0",
    "transformers>=4.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
