[project]
name = "book-bartering-backend"
version = "0.1.0"
description = "Django-based backend for a social networking platform focused on book bartering and exchange"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Django
    "Django>=5.2",
    "djangorestframework>=3.15.0",
    "django-cors-headers>=4.3.0",

    # Authentication & Authorization
    "django-allauth>=0.57.0",
    "djoser>=2.2.0",
    "djangorestframework-simplejwt>=5.3.0",
    "google-auth>=2.23.0",

    # Database & ORM
    "psycopg[binary]>=3.1.0",
    "django-extensions>=3.2.0",
    "dj-database-url>=2.1.0",

    # Social Features
    "django-activity-stream>=2.0.0",
    "django-notifications-hq>=1.8.0",
    "django-taggit>=5.0.0",
    "django-star-ratings>=0.9.2",

    # Real-time Features
    "channels[daphne]>=4.0.0",
    "channels-redis>=4.2.0",

    # File Handling & Storage
    "Pillow>=10.0.0",
    "django-storages>=1.14.0",
    "boto3>=1.34.0",

    # API Documentation
    "drf-spectacular>=0.27.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "django-filter>=23.0",
    "django-crispy-forms>=2.1",
    "crispy-bootstrap5>=2024.2",

    # Background Tasks
    "celery>=5.3.0",
    "redis>=5.0.0",

    # Development & Testing (also needed in production for health checks)
    "django-debug-toolbar>=4.2.0",
    "django-silk>=5.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",

    # Code Quality
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",

    # Development Tools
    "ipython>=8.15.0",
    "django-debug-toolbar>=4.2.0",
    "django-silk>=5.0.0",

    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",

    # Type Stubs
    "django-stubs>=4.2.0",
    "djangorestframework-stubs>=3.14.0",
    "types-requests>=2.31.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["accounts", "books", "social", "barter", "notify", "core"]

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 79
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]

