[project]
name = "book-bartering-backend"
version = "0.1.0"
description = "Django-based backend for a social networking platform focused on book bartering and exchange"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Django
    "Django>=5.2",
    "djangorestframework>=3.15.0",
    "django-cors-headers>=4.3.0",
    # Authentication & Authorization
    "django-allauth>=0.57.0",
    "djoser>=2.2.0",
    "djangorestframework-simplejwt>=5.3.0",
    "google-auth>=2.23.0",
    # Database & ORM
    "psycopg[binary]>=3.1.0",
    "django-extensions>=3.2.0",
    "dj-database-url>=2.1.0",
    # Social Features
    "django-activity-stream>=2.0.0",
    "django-notifications-hq>=1.8.0",
    "django-taggit>=5.0.0",
    "django-star-ratings>=0.9.2",
    # Real-time Features
    "channels[daphne]>=4.0.0",
    "channels-redis>=4.2.0",
    # File Handling & Storage
    "Pillow>=10.0.0",
    "django-storages>=1.14.0",
    "boto3>=1.34.0",
    # API Documentation
    "drf-spectacular>=0.27.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "django-filter>=23.0",
    "django-crispy-forms>=2.1",
    "crispy-bootstrap5>=2024.2",
    # Background Tasks
    "celery>=5.3.0",
    "redis>=5.0.0",
    "django-redis>=5.4.0",
    # Development & Testing (also needed in production for health checks)
    "django-debug-toolbar>=4.2.0",
    "django-silk>=5.0.0",
    "ruff>=0.14.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",

    # Code Quality
    "ruff>=0.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "bandit>=1.7.5",

    # Development Tools
    "ipython>=8.15.0",
    "django-debug-toolbar>=4.2.0",
    "django-silk>=5.0.0",

    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",

    # Type Stubs
    "django-stubs>=4.2.0",
    "djangorestframework-stubs>=3.14.0",
    "types-requests>=2.31.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["accounts", "books", "social", "barter", "notify", "core"]

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 79
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config"]
testpaths = [
    "accounts/tests",
    "books/tests",
    "social/tests",
    "barter/tests",
    "notify/tests",
]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "run_tests.py",
    "tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
# Same line length as black
line-length = 79
target-version = "py311"

# Exclude directories
exclude = [
    ".eggs",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and more
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "DJ001", # Avoid using null=True on string-based fields
    "B904",  # Within except clause, raise from err (too strict for Django)
    "N815",  # mixedCase variable (allow for API compatibility)
    "N802",  # Function name should be lowercase (Django validators use field names)
    "B017",  # assertRaises(Exception) is fine in tests
]

[tool.ruff.lint.per-file-ignores]
# Ignore import errors in __init__.py files
"__init__.py" = ["F401"]
# Ignore all errors in migrations (auto-generated)
"**/migrations/**" = ["E", "F", "W", "I", "N", "UP", "B", "C4", "DJ", "SIM"]
# Ignore specific rules in test files
"test_*.py" = ["S101"]   # Allow assert in tests
"**/tests/**" = ["S101"]
# Allow module-level imports not at top in specific files
"**/asgi.py" = ["E402"]
"**/settings.py" = ["E402"]
"**/debug_auth.py" = ["E402"]
"**/test_*.py" = ["E402"]

[tool.ruff.lint.isort]
# Use black-compatible isort settings
known-first-party = ["accounts", "books", "social", "barter", "notify", "core"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
# Bandit security linting configuration
exclude_dirs = [
    "*/migrations/*",
    "*/tests/*",
    "tests/*",
    ".venv/*",
    "venv/*",
    "htmlcov/*",
    "__pycache__/*",
]
# Only report medium and high severity issues
skips = ["B101"] # Skip assert_used (common in tests, already excluded)
# Confidence levels: LOW, MEDIUM, HIGH
# Severity levels: LOW, MEDIUM, HIGH
